# cookiecutter-ros-node

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.project_slug }}/: CMakeLists.txt  package.xml
{{ cookiecutter.project_slug }}/include/{{cookiecutter.project_slug}}/: {{cookiecutter.project_slug}}.hpp  {{cookiecutter.project_slug}}_topics.hpp
{{ cookiecutter.project_slug }}/launch/: rc_monitor.launch  {{cookiecutter.project_slug}}.launch
{{ cookiecutter.project_slug }}/src/: {{cookiecutter.project_slug}}.cpp  {{cookiecutter.project_slug}}_node.cpp  {{cookiecutter.project_slug}}_node.hpp
{{ cookiecutter.project_slug }}/test/: CMakeLists.txt  {{cookiecutter.project_slug}}_main.cpp  {{cookiecutter.project_slug}}_test.cpp
